--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-minimal-pie-chart": "^9.1.2",
     "react-router": "^7.10.1",
+    "recharts": "^3.6.0",
     "sweetalert2": "^11.26.10",
     "tailwindcss": "^4.1.17"
   },
